# design-patterns

./: .gitlab-ci.yml  CMakeLists.txt  README.md
01_strategy_pattern/: CMakeLists.txt  Duck.cpp  Duck.hpp  DuckCall.cpp  DuckCall.hpp  FlyBehavior.hpp  QuackBehavior.cpp  QuackBehavior.hpp  README.md  main.cpp
02_observer_pattern/: CMakeLists.txt  Observer.cpp  Observer.hpp  Payload.cpp  Payload.hpp  README.md  Screen.cpp  Screen.hpp  Subject.cpp  Subject.hpp  WeatherPayload.cpp  WeatherPayload.hpp  WeatherStation.cpp  WeatherStation.hpp  index.html  main.cpp  uml.wsd
03_decorator_pattern/: CMakeLists.txt  Pizza.cpp  Pizza.hpp  PizzaDecorator.cpp  PizzaDecorator.hpp  README.md  Styles.cpp  Styles.hpp  Toppings.cpp  Toppings.hpp  main.cpp
04_factory_pattern/: CMakeLists.txt  PizzaFactory.cpp  PizzaFactory.hpp  PizzaStore.cpp  PizzaStore.hpp  README.md  main.cpp
05_singleton_pattern/: CMakeLists.txt  README.md  Singleton.cpp  Singleton.hpp  main.cpp
06_command_pattern/: CMakeLists.txt  Client.hpp  Command.cpp  Command.hpp  Invoker.cpp  Invoker.hpp  README.md  Receiver.cpp  Receiver.hpp  main.cpp
07_adapter_pattern/: CMakeLists.txt  DuckAdapter.cpp  DuckAdapter.hpp  README.md  Turkey.cpp  Turkey.hpp  main.cpp
08_template-method_pattern/: Behaviors.cpp  Behaviors.hpp  Beverage.cpp  Beverage.hpp  CMakeLists.txt  README.md  main.cpp
09_iterator_pattern/: CMakeLists.txt  Iterator.cpp  Iterator.hpp  Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp  README.md  Waitress.cpp  Waitress.hpp  main.cpp
10_state_pattern/: CMakeLists.txt  Machine.cpp  Machine.hpp  README.md  State.cpp  State.hpp  main.cpp
12_model-view-controller/: CMakeLists.txt  README.md  main.cpp
chap1_intro/: CMakeLists.txt  Duck.cpp  Duck.hpp  FlyBehavior.cpp  FlyBehavior.hpp  main.cpp
