
add_executable (
    04_main
    ../03_decorator_pattern/Pizza.hpp
    ../03_decorator_pattern/Pizza.cpp
    ../03_decorator_pattern/PizzaDecorator.hpp
    ../03_decorator_pattern/PizzaDecorator.cpp
    ../03_decorator_pattern/Styles.hpp
    ../03_decorator_pattern/Styles.cpp
    ../03_decorator_pattern/Toppings.hpp
    ../03_decorator_pattern/Toppings.cpp
    PizzaFactory.hpp
    PizzaFactory.cpp
    PizzaStore.hpp
    PizzaStore.cpp
    main.cpp
)

